// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid MML 1 1`] = `
<div
  className="mml-container"
>
  This chat message has invalid formatting and can't be shown
</div>
`;

exports[`invalid MML 2 1`] = `
<div
  className="mml-container"
/>
`;

exports[`mml name and simple text field 1`] = `
<div
  className="mml-container"
>
  <p>
    hi
  </p>
</div>
`;

exports[`only supported attributes are allowed 1`] = `
<div
  className="mml-container"
>
  <p>
    hi
  </p>
</div>
`;

exports[`simple carousel 1`] = `
<div
  className="mml-container"
/>
`;

exports[`simple input 1`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <input
      name="name"
      onChange={[Function]}
      value="John"
    />
  </form>
</div>
`;
